# OcastaProxy

./: Cargo.toml  README.md  compileWASM.sh
src/: lib.rs  main.rs  rewrite.rs  websocket.rs
static/: client.js  index.html  index.js  wasm.js  wasm_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
