[package]
name = "ocastaproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.20"
libtor = { version = "47.13.0", features = ["vendored-openssl"] }
lol_html = "0.3"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
