[package]
name = "ocastaproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
base64 = "0.21"
futures-util = "0.3"
lol_html = "0.4"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
